--- a/.github/workflows/waka-simple.yml
+++ b/.github/workflows/waka-simple.yml
@@ -1,23 +1,19 @@
-name: Waka Readme
+name: WakaTime Readme
 
 on:
-  workflow_dispatch: # for manual workflow trigger
   schedule:
-    - cron: '30 14 * * *' # runs at every 12AM UTC
+    - cron: '0 20 * * *'
+  workflow_dispatch:
 
 jobs:
   update-readme:
-    name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
-      - uses: rfangki/waka-readme@master
+      - uses: athul/waka-readme@2aab71918a9e3553309bda98e1cc570a07482d3c
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SECTION_NAME: "waka-simple"
-          COMMIT_MESSAGE: "Updated simple waka stats section"
-          BLOCKS: "⣀⣄⣤⣦⣶⣷⣿"
-          TIME_RANGE: all_time
+          API_BASE_URL: ${{ secrets.WAKAPI_BASE_URL }}
+          WAKATIME_API_KEY: ${{ secrets.WAKAPI_API_KEY }}
+          COMMIT_MESSAGE: Update Wakapi stats
+          BLOCKS: "⬜🟨🟩"
+          TIME_RANGE: last_30_days
           SHOW_TIME: true
-          SHOW_MASKED_TIME: true
-          SHOW_TITLE: true
